--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>Twitter Sentiment</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -14,9 +16,21 @@
 <body>
     <main>
     </main>	
-	<script type="text/html" id="tweet-template">
-		<p><%= text %></p>
-		<small><%= user.screen_name %></small>
+	<script type="text/html" id="tweets-template">
+        <span class="title">Tweets</span>
+		<table class="table table-striped">
+            <thead>
+                <th>User</th>
+                <th>Tweet</th>
+                <th>Sentiment</th>
+            </thead>
+            <tbody></tbody>
+		</table>
+	</script>
+    <script type="text/html" id="tweet-template">
+        <td><%= user.screen_name %></td>
+		<td><%= text %></td>
+		<td><span class="label <%= getSentimentClass() %>"><%= sentiment.type %></span></td>
 	</script>
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="/vendor/js/jquery.js"></script>
@@ -25,7 +39,7 @@
 	<script src="/vendor/js/backbone.marionette.min.js"></script>
 	<script src="/app/app.js"></script>
 	<script type="application/javascript">
-		app.start();
+		window.app.start();
 	</script>
 </body>
 </html>
