--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <![endif]-->
 </head>
 <body>
-    <nav>
-    </nav>
+    <nav></nav>
     <main class="container-fluid">
     </main>
 	<script type="text/html" id="nav-template">
