Standardised module structures.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 	<script src="/app/modules/nav.js"></script>
 	<script src="/app/modules/sentiments.js"></script>
 	<script src="/app/modules/tweets.js"></script>
-	<script src="/app/modules/tweet-filters.js"></script>
+	<script src="/app/modules/filters.js"></script>
 	<script src="/app/modules/search.js"></script>
 	<script type="application/javascript">
 		window.app.start();
