Replaced dependencies with browserify bundle.

--- a/index.html
+++ b/index.html
@@ -87,24 +87,8 @@
         <div class="col-md-12" id="tweets"></div>
     </script>
 	<script src="/socket.io/socket.io.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/backbone.marionette/2.2.1/backbone.marionette.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.13/d3.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/c3/0.3.0/c3.min.js"></script>
-	<script src="/vendor/js/backbone.radio.js"></script>
-	<script src="/app/app.js"></script>
-	<script src="/app/modules/dashboard.js"></script>
-	<script src="/app/modules/explore.js"></script>
-	<script src="/app/modules/nav.js"></script>
-	<script src="/app/modules/sentiments.js"></script>
-	<script src="/app/modules/tweets.js"></script>
-	<script src="/app/modules/filters.js"></script>
-	<script src="/app/modules/search.js"></script>
-	<script src="/app/modules/gauge.js"></script>
-	<script type="application/javascript">
-		window.app.start();
-	</script>
+	<script src="/bundle.js"></script>
 </body>
 </html>
