--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
         <td><%= text %></td>
         <td><span class="label <%= getSentimentClass() %>"><%= getSentimentLabel() %></span></td>
     </script>
+    <script type="text/html" id="latest-tweets-template">
+        <span class="title">Latest Tweets</span>
+        <div class="latest-tweets"></div>
+    </script>
+    <script type="text/html" id="latest-tweets-item-template">
+        <div>
+            <p><%= text %></p>
+            <span><%= user.screen_name %></span>
+        </div>
+    </script>
     <script type="text/html" id="tweet-filters-template">
     </script>
     <script type="text/html" id="tweet-filter-template">
