Added acceptance tests.

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     </script>
     <script type="text/html" id="tweets-layout-template">
         <span class="title">Tweets</span>
-        <div class="options"></div>
-        <div class="tweets"></div>
+        <div class="options-container"></div>
+        <div class="tweets-container"></div>
     </script>
 	<script type="text/html" id="tweets-template">
 		<table class="table table-striped">
