Added sentiment color styles to SASS.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <script type="text/html" id="tweet-template">
         <td><%= user.screen_name %></td>
         <td><%= text %></td>
-        <td><span class="label <%= getSentimentClass() %>"><%= getSentimentLabel() %></span></td>
+        <td><span class="label <%= getSentimentLabel() %>"><%= getSentimentLabel() %></span></td>
     </script>
     <script type="text/html" id="latest-tweets-template">
         <span class="title">Latest Tweets</span>
