Refactored tweets to use sentiment color in project SASS.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <div class="latest-tweet__text">
             <p>
-                <span class="latest-tweet__text__sentiment  alert  <%= getSentimentClass() %>"></span>
+                <span class="latest-tweet__text__sentiment  alert  <%= getSentiment() %>"></span>
                 <span class="latest-tweet__text__username"><%= user.screen_name %></span>
                 <%= text %>
             </p>
